# ori

./: .SRCINFO  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  install.sh  orpm
.github/workflows/: aur.yml
aur/: PKGBUILD
include/: ori_core.h  ori_edit.h  ori_gui.h  orpm.h
plugins/: plugin_database.json
src/: main.cpp
src/core/: ori_config.cpp  ori_core.cpp  ori_edit.cpp  ori_edit.h
src/gui/: gui.cpp
src/plugins/: orpm.cpp
www/: index.html
